--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,8 +11,24 @@ jobs:
   build:
     name: Test
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: secret
+          POSTGRES_USER: root
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+    - name: Run migrations
+      run: make migrateup
     - name: Test
       run: make test
